# claude_control

./: .env.example  .gitignore  AGENT_IMPROVEMENT_PLAN.md  AUTONOMOUS_AGENT_ANALYSIS.md  README.md  autonomous_graph.md  main.py  prompt.txt  pyproject.toml  requirements.txt  test.py  test_concurrency.py  update.md  visualize_autonomous_graph.py
controller/: agent_controller.py  claude_controller.py  command_controller.py  config_controller.py  mcpController.py  orchestration_controller.py
mcp/: README.md  example_filesystem.json.template  example_github.json.template
prompts/: README.md  developer.md  manager-session.md  manager.md  researcher.md  self-manager-enhanced.md  self-manager.md  worker.md
service/: mcp_loader.py
service/claude_manager/: __init__.py  cli_discovery.py  constants.py  mcp_tools_server.py  models.py  platform_utils.py  process_manager.py  session_manager.py  session_store.py  sessions.json  storage_utils.py  stream_parser.py
service/config/: __init__.py  base.py  channel_configs.py  config_client.py  manager.py
service/database/: __init__.py  database_client.py
service/langgraph/: __init__.py  agent_session.py  agent_session_manager.py  autonomous_graph.py  autonomous_graph.py.bak  checkpointer.py  claude_cli_model.py  context_guard.py  model_fallback.py  resilience_nodes.py  session_freshness.py  state.py
service/logging/: __init__.py  session_logger.py
static/: app.js  index.html  style.css
templates/: index.html
tools/: README.md  __init__.py  _mcp_server.py  base.py  example_tool.py  manager_tools.py
(+95 files in other folders)
